# mythic-relay

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: backlog-investigator.md
.claude/skills/ai-resolve/: SKILL.md
.claude/skills/ai-resolve/references/: autonomous-checklist.md  thread-resolution.md
.claude/skills/backlog-investigator/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/review-code/assets/: quick-ref.md
.claude/skills/review-code/references/: gha-yaml.md  python.md  security.md
.github/actions/setup-claude-minimax/: action.yml
.github/workflows/: ai-describe.yml  ai-resolve.yml  claude-code-review.yml  claude-issue-implement.yml
docs/: agent-runtime.md  architecture.md  backlog.md  gitops-branching.md  handoff-spec.md  operator-playbook.md  roadmap.md  security.md  stakeholder-onepager.md  workflow.md
mythic-relay-action/: Dockerfile  README.md  action.yml  entrypoint.py
mythic_relay/: __init__.py  cli.py
mythic_relay/github/: __init__.py  api.py
src/agents/: base.py  claude_code.py
src/classification/: classifier.py  risk_engine.py
src/core/: context.py  pipeline.py  state_machine.py
src/github/: checkpoint_manager.py  client.py  commenter.py  finalizer.py  git_manager.py
src/triggers/: command.py  schedule.py
src/utils/: logger.py  metrics.py  retry_handler.py
tests/: test_cli.py  test_github_api.py  test_package.py
